# layer8-backbone

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md  TLS.md  docker-compose.build.yml  docker-compose.yml  docker_run.sh  server_conf.yml
.github/workflows/: docker-test.yml  e2e-fp-l8-tests.yml  e2e-test.yml
backend/: index.js  package-lock.json  package.json
certs/config/: ca-config.json  ca-csr.json  forward-csr.json  reverse-csr.json
certs/mtls/: Readme.md
certs/mtls/config/: reverse-proxy-ext.cnf
docker/: Makefile  docker-compose.build.yml  docker-compose.yml
docker/layer8-volumes/: .env.docker
forward-proxy/: .env  .env.dev  .env.docker  Cargo.toml  Dockerfile  Makefile  build.rs  docker.dev.env  server_conf.yml
forward-proxy/benchmarks/: base_impl.txt  reduce_cloning_in_pringora_router.txt
forward-proxy/src/: config.rs  main.rs  old.rs  proxy.rs  types.rs  utils.rs
forward-proxy/src/handler/: consts.rs  helpers.rs  mod.rs  utils.rs
forward-proxy/src/handler/types/: mod.rs  request.rs  response.rs
forward-proxy/src/message/: mod.rs
forward-proxy/src/router/: ctx.rs  mod.rs  others.rs  utils.rs
forward-proxy/src/statistics/: influxdb_client.rs  mod.rs
frontend/: README.md  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/assets/: ca-key.pem  ca.csr  ca.pem
frontend/src/components/: Ask.vue  HelloWorld.vue
pingora-router/: Cargo.toml
pingora-router/src/: ctx.rs  handler.rs  lib.rs  router.rs  utils.rs
reverse-proxy/: .env.dev  .env.docker  Cargo.toml  Dockerfile  config.toml
reverse-proxy/benchmarks/: base_impl.txt  reduce_cloning_in_pringora_router.txt
reverse-proxy/scratch/: cert.pem  key.pem
reverse-proxy/src/: config.rs  main.rs  main_v2.rs  proxy.rs  tls_conf.rs
reverse-proxy/src/handler/: consts.rs  mod.rs  types.rs  utils.rs
reverse-proxy/src/handler/common/: consts.rs  handler.rs  mod.rs  types.rs  utils.rs
reverse-proxy/src/handler/healthcheck/: mod.rs
reverse-proxy/src/handler/init_tunnel/: handler.rs  mod.rs
reverse-proxy/src/handler/proxy/: handler.rs  mod.rs
spa/backend/: Dockerfile  index.js  mock-database.js  package-lock.json  package.json
spa/frontend/: .env.dev  Dockerfile  package-lock.json  package.json  vite.config.ts
spa/frontend/src/: App.vue  main.ts  utils.ts
spa/frontend/src/components/: Callback.vue  GetPictures.vue  GetPoems.vue  Login.vue  Profile.vue  Register.vue  Upload.vue
spa/frontend/src/router/: index.ts
test/: e2e-test.js  package-lock.json  package.json
test/cypress/: package-lock.json  package.json
test/cypress/cypress/e2e/: 01_full_flow_test.cy.js
utils/: Cargo.toml
utils/src/: cert.rs  compression.rs  deserializer.rs  jwt.rs  lib.rs  log.rs
