[workspace]
resolver = "3"
members = ["forward-proxy", "reverse-proxy", "pingora-router", "utils"]

[workspace.dependencies]
async-trait = "0.1"
bytes = "1"
pingora = { version = "0.5.0", features = ["lb", "boringssl"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.11.7"
log = "0.4.27"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15.0"
boring = { version = "4.5", features = ["pq-experimental"] }
once_cell = "1.21.3"
