[package]
name = "forward-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
bytes = "1.10.1"
clap = { version = "3.2.25", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
log = "0.4.27"
chrono = "0.4.40"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
pingora = { version = "0.5.0", features = ["lb", "boringssl"] }
jsonwebtoken = "9.3.1"
dotenv = "0.15.0"
futures = "0.3.31"
pingora-router = { git = "https://github.com/globe-and-citizen/layer8-backbone.git", branch = "development" } # TODO: Change to point to {path = "../xxx", version = "0.1.0"} when xxx is published
once_cell = "1.21.3"
pingora-error = "0.5.0"
boring = "4.17.0"
env_logger = "0.11.8"
utils = { git = "https://github.com/globe-and-citizen/layer8-backbone.git", branch = "development" }          # TODO: Change to point to {path = "../xxx", version = "0.1.0"} when xxx is published
hex = "0.4.3"
