[package]
name = "forward-proxy"
version = "0.3.6"
edition = "2024"

[dependencies]
async-trait = "0.1"
bytes = "1.10.1"
clap = { version = "3.2.25", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = "0.4.40"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
pingora = { version = "0.5.0", features = ["lb", "boringssl"] }
jsonwebtoken = "9.3.1"
dotenv = "0.15.0"
futures = "0.3.31"
pingora-router = { path = "../pingora-router", version = "0.1.0" }
once_cell = "1.21.3"
pingora-error = "0.5.0"
boring = "4.17.0"
utils = { path = "../utils", version = "0.1.0" }
hex = "0.4.3"
envy = "0.4.2"
tracing = "0.1.41"
influxdb2 = { version = "0.5.2", default-features = false, features = ["rustls"] }

