[package]
name = "pingora-router"
version = "0.1.0"
edition = "2024"

[dependencies]
#pingora = { git = "https://github.com/dtpthao/pingora.git", tag = "0.4.1", features = [ "lb" ]  }
log = "0.4.27"
futures = "0.3.31"
pingora = { version = "0.4.0", features = ["lb"] }
serde = "1.0.219"
serde_json = "1.0.140"

[patch.crates-io]
sfv = { git = "https://github.com/undef1nd/sfv.git", tag = "v0.9.4" }