[package]
name = "reverse-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
bytes = "1.10.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.8.26"
env_logger = "0.11.7"
log = "0.4.27"
chrono = "0.4.40"
reqwest = { version = "0.11", features = ["json"] }
tokio-rustls = "0.26.2"
tokio = "1.44.2"
pingora-router = { git = "https://github.com/globe-and-citizen/layer8-backbone.git", branch = "development" } # TODO: Change to point to {path = "../xxx", version = "0.1.0"} when xxx is published
pingora = { version = "0.5.0", features = ["lb", "boringssl"] }
futures = "0.3.31"
boring = "4.17.0"
once_cell = "1.21.3"
dotenv = "0.15.0"
ntor = { git = "https://github.com/globe-and-citizen/ntor.git", tag = "0.1.1" }
config = "0.15.11"
toml = "0.8.23"
uuid = { version = "1.16.0", features = ["v4"] }
utils = { git = "https://github.com/globe-and-citizen/layer8-backbone.git", branch = "development" }          # TODO: Change to point to {path = "../xxx", version = "0.1.0"} when xxx is published
