[package]
name = "reverse-proxy"
version = "0.3.4"
edition = "2024"

[dependencies]
async-trait = "0.1"
bytes = "1.10.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
pingora-router = { path = "../pingora-router", version = "0.1.0" }
pingora = { version = "0.5.0", features = ["lb", "boringssl"] }
futures = "0.3.31"
boring = "4.17.0"
dotenv = "0.15.0"
ntor = { git = "https://github.com/globe-and-citizen/ntor.git", tag = "0.1.1" }
utils = { path = "../utils", version = "0.1.0" }
envy = "0.4.2"
tracing = "0.1"
hotpath = { git = "https://github.com/pawurb/hotpath.git", branch = "develop", optional = true }

[features]
hotpath = ["dep:hotpath", "hotpath/hotpath"]
hotpath-alloc-bytes-total = ["hotpath/hotpath-alloc-bytes-total"]
hotpath-alloc-count-total = ["hotpath/hotpath-alloc-count-total"]
hotpath-alloc-self = ["hotpath/hotpath-alloc-self"]
hotpath-off = ["hotpath/hotpath-off"]
