[package]
name = "reverse-proxy"
version = "0.3.4"
edition = "2024"

[dependencies]
async-trait = "0.1"
bincode = "2.0.1"
boring = "4.17.0"
bytes = "1.10.1"
chrono = "0.4.40"
config = "0.15.11"
dotenv = "0.15.0"
env_logger = "0.11.7"
envy = "0.4.2"
futures = "0.3.31"
hex = "0.4.3"
ntor = { git = "https://github.com/globe-and-citizen/ntor.git", branch = "fix/use-bincode-instead-of-json" }
once_cell = "1.21.3"
pingora = { version = "0.5.0", features = ["lb", "boringssl"] }
pingora-router = { path = "../pingora-router", version = "0.1.0" }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.8.26"
tokio = "1.44.2"
tokio-rustls = "0.26.2"
toml = "0.8.23"
utils = { path = "../utils", version = "0.1.0" }
tracing = "0.1.41"
uuid = { version = "1.16.0", features = ["v4"] }
