[package]
name = "utils"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version="0.11", default-features=false, features=["json", "rustls-tls"] }
uuid = { version = "1.16.0", features = ["v4"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
base64 = "0.21.7"
chrono = "0.4.40"
jsonwebtoken = "9.3.1"
url = "2.5.4"
pem = "3.0.5"
x509-parser = "0.17.0"
hex = "0.4.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter", "fmt"] }
tracing-appender = "0.2.3"

